@@ -8,6 +8,12 @@
 
 <h1 style="align:center">Rasqal RDF Query Library - News</h1>
 
+<h2>2005-??-?? Version 0.9.8 Released</h2>
+
+<p>Not yet released.
+</p>
+
+
 <h2>2005-02-27 Version 0.9.7 Released</h2>
 
 <p>Fix a resource cleanup problem when query results were not fully read<br />
