@@ -64,7 +64,7 @@ extern "C" {
  */
 
 /* Release version as a decimal */
-#define RASQAL_VERSION_DECIMAL 907
+#define RASQAL_VERSION_DECIMAL 908
 
 /* Major version number */
 #define RASQAL_VERSION_MAJOR 0
@@ -73,10 +73,10 @@ extern "C" {
 #define RASQAL_VERSION_MINOR 9
 
 /* Release version number */
-#define RASQAL_VERSION_RELEASE 7
+#define RASQAL_VERSION_RELEASE 8
 
 /* Version number of package */
-#define VERSION "0.9.7"
+#define VERSION "0.9.8"
 
 #include <windows.h>
 #include <io.h>
